Changelog:
Versions without changelogs probably had very small misc fixes, like tweaks to the source code

Key:
  + Addition
  = Fix
  ! Change
  - Removal

Version 1.5.00-dev
 - Removed deprecated permission nodes

Version 1.4.08-dev
 + Added a new skill; Alchemy. Special thanks to EasyMFnE for creating this!
 + Added SecondaryAbilityType enum, and new SecondaryAbilityWeightedActivationCheckEvent, fired when a secondary ability checkes its activation chances
 + Added the possibility to gain experience when using Fishing "Shake"
 + Added config options to disable various sound effects
 + Smelting now works with custom ores - add smelting XP value to blocks.yml, or it will default to 1/10th of normal XP.
 + Added automatic cleanup of backups folder.
 + Added bypass permission for finding Fishing traps
 + Added level threshold settings to hardcore modes. When a players skill level is below this threshold, they will not lose any stats
 + Added party alliances, two parties can now team up. Allies share party chat and cannot harm each other.
 + Added new experience bonus perk 'mcmmo.perks.xp.10percentboost.<skillname>' multiplies incoming XP by 1.1
 + Added new experience bonus perk 'mcmmo.perks.xp.customboost.<skillname>' multiplies incoming XP by the boost amount defined in the experience config
 + Added Ender Dragon, Wither, and Witch to combat experience multipliers - they do not give XP by default
 + Added support for multiple mod config files, naming can be done as either armor.<modname>.yml or <modname>.armor.yml
 = Fixed bug where healthbars wouldn't display if skills were disabled
 = Fixed bug with Call of The Wild entities despawning
 = Fixed bug with updating (very) old user data.
 = Fixed bug with checking maximum durability of mod items.
 = Fixed exploit involving Call of The Wild.
 = Fixed bug where LeafBlower permissions were ignored
 = Fixed bug with toggle commands not properly displaying the success message.